tests/parser/assignment/invalid_04.m.out
In invalid_04.m, line 2
|   [x, y, ] = size(1);
|          ^ error: expected IDENTIFIER, found A_KET instead
MISS_HIT Summary: 1 file(s) analysed, 1 error(s)
