tests/parser/assignment/invalid_04.m
function invalid_04()
  [x, y, ] = size(1);
end
